# RedClient

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RedClient.cpp  RedClient.h  RedClient.kdev4  RedClient.qmlproject  abstracttreemodel.cpp  abstracttreemodel.h  globals.h  issuesmodel.cpp  issuesmodel.h  main.cpp  projectsmodel.cpp  projectsmodel.h  redminemanager.cpp  redminemanager.h  rmissue.cpp  rmissue.h  rmobjectsummary.cpp  rmobjectsummary.h  rmproject.cpp  rmproject.h  rmreqissues.cpp  rmreqissues.h  rmreqprojects.cpp  rmreqprojects.h  rmreqtimeentry.cpp  rmreqtimeentry.h  rmrequest.cpp  rmrequest.h  rmrequsers.h  rmtimeentry.cpp  rmtimeentry.h  rmuser.cpp  rmuser.h  timeentriesmodel.cpp  timeentriesmodel.h  usersmodel.cpp  (+1 more)
qml/: CMakeLists.txt  MainWindow.qml  login.cpp  login.h  login.ui  main.cpp
res/icons/: SOURCE.url
systemtray/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
widgets/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
